package main.java;

public interface Dance {

    void spin();
    void doTheCaterpillar();
    void jump();

}
