@startuml
'https://plantuml.com/class-diagram

Bird <|-- Pigeon
Bird <|-- Penguin
Bird <|-- Parrot
Dance <|-- Bird

abstract class Bird {
+String name
+String colour
{abstract}+void speak()
+void fly()
}

class Pigeon{
+void speak()
+void eatPizza()
}

class Penguin{
+void speak()
+void fly()
}

class Parrot{
+void speak()
}

interface Dance{
+void spin()
+void doTheCaterpillar()
+void jump()
}


@enduml
